<resources>
    <string name="app_name">旅游查询</string>
    <string name="register_title">旅游注册</string>>
    <string name="registration">注册</string>

    <!--bottombar-->
    <string name="tourism_control">旅游计划</string>
    <string name="map_search">地图查询</string>
    <string name="person">个人中心</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">刷新</string>
    <string name="sliding_title">SlidingMenu Demo</string>
    <string name="desc_list_item_icon">SlidingMenu</string>
    <string name="title_activity_list_view">ListVIewActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="radiobutton">男</string>
    <string name="radiobutton1">女</string>
    <string name="nbsp">&#160;&#160;</string>
    <string name="default_type">&#160;&#160;未分组&#160;&#160;</string>
    <string name="sure_close">您确定申请关闭当前问题吗？</string>
    <string name="not_replay">未回复</string>
    <string name="arriving">进行中</string>
    <string name="close">已解决</string>
    <string name="timer">距离问题关闭,还剩</string>
    <string name="shit">通便</string>
    <string name="fetalmovement">胎动</string>
    <string name="sport">运动</string>
    <string name="sleep">睡眠</string>
    <string name="bloodpressure">血压</string>
    <string name="bellyband">肚围</string>
    <string name="animalheat">体温</string>
    <string name="weight">体重</string>
    <string name="true_name">真实姓名：</string>
    <string name="please_insert_true_name">请输入真实姓名</string>
    <string name="sex_tv">性别：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="phone_num_tv">手机号：&#160;&#160;&#160;</string>
    <string name="email_tv">电子邮箱：</string>
    <string name="commonly_used_email">常用邮箱</string>
    <string name="hospital_tv">所属医院：</string>
    <string name="insert_hospital">输入医院</string>
    <string name="click_select">点击选择</string>
    <string name="in_the_department">所在科室：</string>
    <string name="select_department">选择科室</string>
    <string name="doctor_position">医生职称：</string>
    <string name="insert_position">输入职称</string>
    <string name="jobs">岗位：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="select_jobs">选择岗位</string>
    <string name="good_at">擅长：&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="document_scanning">证件扫描：</string>
    <string name="post_document">上传执业证</string>
    <string name="sure">同意</string>
    <string name="agreement">《医生开通线上咨询协议》</string>
    <string name="remind_text">客服会在提交后3个工作日内审核完毕,审核通过后会在次日零时起生效</string>
    <string name="doctor_verify">医生认证</string>
    <string name="not_null">不能为空</string>
    <string name="check_no">格式不正确</string>
    <string name="select_hospital">所属医院</string>
    <string name="back_verify">您还有未提交的认证信息，确认退出吗？</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="not_verify">您的账号尚未认证</string>
    <string name="fail_reason">失败原因</string>
    <string name="two_type_verify">您可以通过以下两种方式完成认证:</string>
    <string name="verify_one">1.点击“立即认证”，填写认证资料，客服人员审核成功后完成认证</string>
    <string name="verify_two">2.拨打客服电话010-56277595，向客服人员提供认证资料，我们帮您完成认证；</string>
    <string name="update_info">修改资料</string>
    <string name="take_telephone">如果你在认证过程中遇到问题请致电010-56277595</string>
    <string name="telephone">手机号</string>
    <string name="account_name">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="account_registration">帐号注册</string>
    <string name="save">保存</string>
    <string name="please_input">若库中没有您的医院信息，请手动填写</string>
    <string name="login">登录</string>
    <string name="find_password">找回密码</string>
    <string name="get_code">获取验证码</string>
    <string name="please_set_password">请设置密码，6~16位字母或数字</string>
    <string name="cancle">取消</string>
    <string name="text_diagnose_content">诊断内容：</string>
    <string name="please_inset_new_password">请输入新密码</string>
    <string name="please_inset_new_password_again">请重新输入新密码</string>
    <string name="finish">完成</string>
    <string name="determine">确定</string>
    <string name="post_code_again">重新发送验证码</string>
    <string name="post_code_again_note">如果您没有收到我们发送的验证码，请点击重新发送验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="month">包月</string>
    <string name="isornot_refuse_to_answer">确定拒答当前问题？</string>
    <string name="refuse_to_answer">拒答</string>
    <string name="answer_first">抢答</string>
    <string name="select_refuse_answer_reason">请选择拒答理由</string>
    <string name="not_good_at_field">非擅长领域</string>
    <string name="the_present_is_not_clear">问题阐述不清楚</string>
    <string name="has_nothing_to_do_with_illness">与病情无关</string>
    <string name="other_reason">其它原因</string>
    <string name="input_other_reason">请输入其它原因</string>
    <string name="reason_notification">无论是何种付费方式。您在选择确定后都将全额退款。</string>
    <string name="refuse_answer_reason_not_be_null">拒答理由不能为空</string>

    <string name="oneself_sick_history_left">个人病史：</string>
    <string name="family_sick_history_left">家庭病史：</string>
    <string name="pregnancy_times_left">怀胎次数：</string>
    <string name="baby_times_left">生产次数：</string>
    <string name="question_askforme">提问我的问题</string>
    <string name="question_askforother">提问他人的问题</string>
    <string name="record_pregnancy">每日记录数据</string>
    <string name="name_remark">备注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <string name="tv_diagnose_remark">病情备注</string>
    <string name="diagnose_remark_is_save">病情备注信息还未保存，确定返回吗？</string>

    <string name="picture">图片</string>
    <string name="the_words_technique">话术</string>
    <string name="upload_picture">上传图片</string>
    <string name="regist_success">注册成功</string>
    <string name="verify_fail">认证失败</string>
    <string name="verify_now">立即认证</string>
    <string name="verifying">审核中</string>
    <string name="charge_back">退单</string>
    <string name="select_charge_back_reason">请选择退单理由</string>
    <string name="charge_back_not_be_null">退单理由不能为空</string>
    <string name="monthly_application">包月申请</string>
    <string name="refuse">拒绝</string>
    <string name="sure_refuse">确定拒绝吗？拒绝后将全额退还该用户包月订单的费用</string>
    <string name="agreed">同意</string>
    <string name="sure_agreed">确定同意吗？ 同意后您将在相应的周期内回答用户的咨询</string>
    <string name="someone_somenum">用户“%1$s”申请</string>
    <string name="monthly_num">%1$s个月的包月服务</string>
    <string name="need_finished_application">您有%1$s条待处理的包月申请</string>
    <string name="refuse_time">自动拒绝时间：</string>
    <string name="send">发送</string>
    <string name="application_time">申请时间：%1$s</string>
    <string name="refuse_cost">退款金额：%1$s元</string>
    <string name="refuse_reason">退款原因：%1$s</string>
    <string name="refuse_state">处理结果：%1$s</string>

    <string name="auto_refuse_time">自动同意退款时间：%1$s</string>
    <string name="user_refuse">用户退款申请</string>
    <string name="refuse_getback">拒绝退款</string>
    <string name="agreed_getback">同意退款</string>
    <string name="getback_noty">请到诊室网页端处理此退款请求</string>
    <string name="playNum">%1$s次播放</string>
    <string name="make_up_recommend">小编推荐</string>
    <string name="download">缓存</string>
    <string name="maybe_you_like">猜你喜欢</string>
    <string name="collection_video">离线视频</string>
    <string name="share_weixin">分享到朋友圈</string>
    <string name="video_type">类别：%1$s</string>
    <string name="video_author">作者：%1$s</string>
    <string name="video_info">视频简介：%1$s</string>
    <string name="cached">已经缓存</string>
    <string name="in_cache">正在缓冲</string>
    <string name="my_collection">我的收藏</string>
    <string name="off_line_play">离线观看</string>
    <string name="the_last_period_of_time">末次月经时间</string>
    <string name="any_time_one_day">指定孕周时间</string>
    <string name="the_calculating_unit">计算单位：mm</string>
    <string name="calculating">计算</string>
    <string name="B_ultrasonic_time">B超时间&#160;&#160;</string>
    <string name="Head_arm_length">头臀长&#160;&#160;&#160;&#160;</string>
    <string name="Due_date_time">预产期时间</string>
    <string name="Double_top_diameter">双顶径</string>
    <string name="The_femur_length">股骨长</string>
    <string name="Length_to_diameter">长径</string>
    <string name="width_to_diameter">宽径</string>
    <string name="Thick_diameter">厚径</string>
    <string name="Gestational_sac">妊娠囊</string>
    <string name="HC">HC</string>
    <string name="AC">AC</string>
    <string name="FC">FC</string>
    <string name="BPD">BPD</string>
    <string name="the_last_period_of_times">末次月经时间：%1$s</string>
    <string name="Specify_the_gestational_weeks_of_time">指定孕周时间：%1$s</string>
    <string name="Due_date">预产期：%1$s</string>
    <string name="The_gestational_age">目前孕周：%1$s天</string>
    <string name="the_last_period_of_time_not_null">末次月经时间不能为空</string>
    <string name="B_ultrasonic_time_of_time_not_null">B超时间不能为空</string>
    <string name="Specify_the_gestational_weeks_of_time_not_null">指定孕周时间不能为空</string>
    <string name="Gestational_age_time_specified_date_in_the_last_period_of_time">指定日期孕周时间需在末次月经时间之后</string>
    <string name="From_the_due_date">距离预产期：%1$s天</string>
    <string name="gestational_weeks_calculating">孕周计算结果</string>
    <string name="Check_the_duedate_calculating">核对预产期计算结果</string>
    <string name="Head_arm_length_calculating">根据头臀长计算出的胎儿相当于：%1$s</string>
    <string name="Gestational_sac_calculating">根据妊娠囊计算出的胎儿相当于：%1$s</string>
    <string name="Double_top_diameter_calculating">根据双顶径计算出的胎儿相当于：%1$s周</string>
    <string name="The_femur_length_calculating">根据股骨长计算出的胎儿相当于：%1$s周</string>
    <string name="Gestational_age_today">今日孕周：%1$s</string>
    <string name="Please_fill_the_whole_Double_top_diameter_or_The_femur_length">请补全双顶径/股骨长数据</string>
    <string name="Please_fill_the_whole_Gestational_sac">请补全妊娠囊数据</string>
    <string name="Please_fill_the_whole_Head_arm_length">请补全头臀长数据</string>

    <string name="b_ultrasonic_time">B超时间&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="head_arm_length">头臀长：%1$smm</string>
    <string name="double_top_diameter">双顶径：%1$smm&#160;&#160;&#160;&#160;股骨长：%2$smm</string>
    <string name="gestational_sac">长径：%1$smm&#160;&#160;&#160;&#160;宽径：%2$smm&#160;&#160;&#160;&#160;后径：%3$smm</string>
    <string name="head_arm_length_rule">头臀长请输入0-100内的数值</string>
    <string name="Double_top_diameter_rule">双顶径请输入20-95内的数值</string>
    <string name="The_femur_length_rule">股骨长请输入8-76内的数值</string>
    <string name="gestational_sac_rule">请输入正确的长径/宽径/厚径数值（0-999）</string>
</resources>
